# vain-yksi

./: Cargo.toml  README.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  GameState.ts  WebSocket.ts  app.css
frontend/src/components/: CollectingHints.svelte  GuessAndHint.svelte  Guessing.svelte  Lobby.svelte  Login.svelte
src/: handlers.rs  main.rs  words.rs  ws.rs
static/: index.html
static/assets/: index.12909f62.js  index.23693815.css  index.44eafdad.js  index.7cbaa926.js  index.9c59ca63.css  index.a0222d93.js  index.a9f418dd.css  index.b1bd5068.js  index.cceb9d2d.css  index.dcc5ba50.js  index.feea1a51.js
