[package]
name = "vain-yksi"
description = "Word guessing game done with WebSockets to learn Rust and WebSockets"
version = "0.1.0"
authors = ["Ari Paasonen <paasar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.2"
tokio = { version= "1", features = ["full"] }
tokio-stream = "0.1.6"
warp = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
futures = { version = "0.3", default-features=false}
rand = "0.8.5"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
